# LLM_Rag

./: .dockerignore  .gitattributes  .gitignore  .nbqa.toml  .pre-commit-config.yaml  .safety-policy.yml  .safety-project.ini  .trivyignore  @start_prompt_13_04_2025.md  CHANGELOG.md  Dockerfile  Dockerfile.alpine  Dockerfile.k8s-test  Dockerfile.test  EXPANSION_PLAN.md  Makefile  README.md  README_DEMO.md  README_OCR_IMPROVEMENTS.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  check_db_content.py  check_import.py  check_structure.py  ci-cd-backup.yml  codecov.yml  create_test_db.py  demo_din_multimodal_rag.py  demo_huggingface.py  demo_llm_rag.py  demo_rag_query.py  docker-compose.api.yml  docker-compose.ci.yml  docker-compose.yml  download_model.py  e2e_rag_test.py  entrypoint.sh  import_test.py  inspect_chroma_db.py  junit.xml  (+29 more)
.config/mypy/: mypy.ini
.config/nbqa/: nbqa.toml
.config/pre-commit/: .pre-commit-config.yaml
.config/ruff/: ruff.toml
.cursor/rules/: .cursorrules
.github/: dependabot.yml  trivy-container.yml
.github/scripts/: README_TEST_RUNNER.md  run_tests.py  test.sh
.github/workflows/: ci-cd.yml  container-scan.yml  deploy-environments.yml  docker-build.yml  k8s-test.yaml  k8s-test.yml  security-scan.yml  semantic-release.yml  semantic-versioning.yml
.llm_rag/: pyvenv.cfg
chroma_db/: chroma.sqlite3
data/vectorstore/: chroma.sqlite3
demos/: README.md  demo_din_multimodal_rag.py  demo_huggingface.py  demo_llama_rag.py  demo_llm_rag.py  demo_rag_query.py  demo_sharded_vectorstore.py  performance_test_sharded.py  simple_llama_test.py  simple_load_documents.py  test_html_parser.py  test_llm.py
demos/document_comparison/: DOCUMENT_COMPARISON_DEMO.md  comparison_result.md  demo_comparison.py  demo_doc1.md  demo_doc2.md  run_ocr_comparison_e2e.py
docs/: anti_hallucination.md  semantic_versioning.md  sharded_vectorstore.md  structural_image_extraction.md
docs/document_processing/: loaders.md
examples/: README.md  din_document.xml  din_loader_demo.py  din_rag_demo.py  xml_namespace_utils.py
k8s/: README.md  configmap.yaml  deployment.yaml  env-configmap.yaml  hpa.yaml  ingress.yaml  kind-ci-minimal.yaml  kind-config.yaml  kustomization.yaml  local-deployment.yaml  local-pvc.yaml  local-service.yaml  network-policy.yaml  pvc.yaml  service.yaml  test-script.sh
k8s/clusters/: deploy-dev.sh  deploy-prod.sh
k8s/overlays/dev/: deployment-patch.yaml  hpa-patch.yaml  ingress.yaml  kustomization.yaml
k8s/overlays/production/: deployment-patch.yaml  hpa-patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service-patch.yaml
k8s/test-utils/: KUBERNETES_TEST_UTILS.md  mock_api.py
llm_rag/: __init__.py  llm_rag  version.py
llm_rag/document_processing/: __init__.py  chunking.py  loaders.py
llm_rag/rag/: __init__.py
llm_rag/vectorstore/: __init__.py
output/ocr/basic/: VDE_0636-3_A2_E__DIN_VDE_0636-3_A2__2010-04.md
output/ocr/enhanced/: VDE_0636-3_A2_E__DIN_VDE_0636-3_A2__2010-04.md
output/ocr_eval/: VDE_0636-3_A2_E__DIN_VDE_0636-3_A2__2010-04_basic.txt  VDE_0636-3_A2_E__DIN_VDE_0636-3_A2__2010-04_enhanced.txt
output/ocr_evaluation/: VDE_0636-3_A2_E__DIN_VDE_0636-3_A2__2010-04_basic.txt  VDE_0636-3_A2_E__DIN_VDE_0636-3_A2__2010-04_enhanced.txt
quarantine/llm_rag/: __init__.py  version.py
quarantine/llm_rag/api/: __init__.py
scripts/: README.md  __init__.py  check_commit_message.py  check_documents.py  check_vulnerabilities.sh  cleanup_disk_space.sh  cleanup_local_k8s.sh  direct_search.py  enhanced_rag.py  extract_pdf_tables.py  load_documents.py  load_documents.py.bak  rag_cli.py  run_rag_tests.sh  run_tests.py  search_documents.py  setup_local_k8s.sh  test_anti_hallucination.py  test_bash_scripts.sh  test_deployment.sh  test_docker.sh  test_kubernetes.sh  test_local_k8s.sh  test_rag.py  test_rag_mock.py  test_rag_public.py  test_rag_with_doc_id.py  test_retrieval.py  test_structural_image_extraction.py
scripts/analytics/: __init__.py  analyze_pdf.py  analyze_pdf_enhanced.py  analyze_pdf_simple.py  pdf_extractor.py  rag_integration.py
scripts/checks/: README.md  __init__.py  check_import.py  check_pdf_content.py  check_vectorstore.py
scripts/data/: load_test_data.py
scripts/fixed/: test_rag_mock.py  test_rag_public.py
scripts/loaders/: legacy_loaders.py  load_documents.py  pdf_loader.py
scripts/rag/: e2e_pipeline.py  llama_index_chunking.py  rag_cli.py  rag_pipeline.py  rag_with_anti_hallucination.py  real_world_rag_test.py  refactored_pipeline.py
scripts/tools/: __init__.py  check_structure.py  check_variable_consistency.py  cleanup.sh  diagnose_imports.py  fix_variable_names.py  llama_imports.py
scripts/utils/: README.md  check_db_content.py  create_test_db.py  download_model.py  inspect_chroma_db.py  load_documents.py
src/llm_rag/: __init__.py  constants.py  main.py  version.py
src/scripts/: analytics
synthetic_test_db/: README.md  chroma.sqlite3
test_chroma_db/: README.md  chroma.sqlite3
test_chroma_db/35839de0-d54e-4844-a8a4-7f301a1c94fb/: index_metadata.pickle
test_chroma_db/4036d367-6b8f-413a-aaae-d416118f6ad3/: index_metadata.pickle
test_data/: README.md
test_data/documents/: project_xyz.txt  rag_info.txt
test_docs/: test.csv
tests/: RAG_TESTING.md  README.md  __init__.py  conftest.py  test_chunking.py  test_embeddings.py  test_rag_evaluation.py
tests/api/: __init__.py  test_api.py
tests/bats/: deployment_scripts.bats  test_helper.bash
tests/core/: __init__.py  test_core.py
tests/document_processing/: test_loaders.py  test_loaders_integration.py
tests/e2e/: test_full_pipeline.py
tests/evaluation/: test_rag_evaluation.py
tests/integration/: README.md  conftest.py  test_llama_cpp.py  test_rag.py  test_rag_query.py  test_retrieval.py  test_vectorstore.py
tests/promptfoo/: README.md  SUMMARY.md  promptfoo.yaml  run_rag_pipeline.py  run_tests.sh
tests/test_data/: README.md  README_din_document.md  llama3_info.txt  rag_systems.txt  sample.txt  test.txt
tests/unit/: __init__.py  test_chunking.py
tests/vectorstore/: __init__.py  test_base.py  test_vectorstore.py
(+196 files in other folders)
